--- a/HTML/project.html
+++ b/HTML/project.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../CSS/header.css">
+    <link rel="stylesheet" href="../CSS/projects.css">
     <title>Project</title>
 </head>
 
@@ -14,14 +16,14 @@
             <div class="contaner">
 
                 <div class="logo">
-                    <img src="image/me.jpg" alt="the logo in navbar">
+                    <img src="../image/me.jpg" alt="the logo in navbar">
                 </div>
                 <div>
                     <ul>
-                        <li><a href="index.html">about</a></li>
-                        <li><a href="experience.html">experience</a></li>
-                        <li><a href="project.html">project</a></li>
-                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="../index.html">about</a></li>
+                        <li><a href="./contact.html">experience</a></li>
+                        <li><a href="./project.html">project</a></li>
+                        <li><a href="./contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -35,7 +37,7 @@
                     <div class="details-project">
 
                         <div class="image">
-                            <a href="https://s0if.github.io/second-project/"> <img src="image/cover.png"
+                            <a href="https://s0if.github.io/second-project/"> <img src="../image/cover.png"
                                     alt="thes caver paje to project"></a>
                         </div>
                         <div class="information">
@@ -50,7 +52,7 @@
                                 </div>
                                 <div class="icon">
                                     <a href="https://github.com/s0if/second-project.git"> <img
-                                            src="image/github-icon.png" alt="github-icon"></a>
+                                            src="../image/github-icon.png" alt="github-icon"></a>
                                 </div>
                             </div>
                         </div>
@@ -58,7 +60,7 @@
                     <div class="details-project">
 
                         <div class="image">
-                            <a href="https://s0if.github.io/second-project/"> <img src="image/cover.png"
+                            <a href="https://s0if.github.io/second-project/"> <img src="../image/cover.png"
                                     alt="thes caver paje to project"></a>
                         </div>
                         <div class="information">
@@ -73,7 +75,7 @@
                                 </div>
                                 <div class="icon">
                                     <a href="https://github.com/s0if/second-project.git"> <img
-                                            src="image/github-icon.png" alt="github-icon"></a>
+                                            src="../image/github-icon.png" alt="github-icon"></a>
                                 </div>
                             </div>
                         </div>
@@ -81,7 +83,7 @@
                     <div class="details-project">
 
                         <div class="image">
-                            <a href="https://s0if.github.io/second-project/"> <img src="image/cover.png"
+                            <a href="https://s0if.github.io/second-project/"> <img src="../image/cover.png"
                                     alt="thes caver paje to project"></a>
                         </div>
                         <div class="information">
@@ -96,7 +98,7 @@
                                 </div>
                                 <div class="icon">
                                     <a href="https://github.com/s0if/second-project.git"> <img
-                                            src="image/github-icon.png" alt="github-icon"></a>
+                                            src="../image/github-icon.png" alt="github-icon"></a>
                                 </div>
                             </div>
                         </div>
@@ -104,7 +106,7 @@
                     <div class="details-project">
 
                         <div class="image">
-                            <a href="https://s0if.github.io/second-project/"> <img src="image/cover.png"
+                            <a href="https://s0if.github.io/second-project/"> <img src="../image/cover.png"
                                     alt="thes caver paje to project"></a>
                         </div>
                         <div class="information">
@@ -119,7 +121,7 @@
                                 </div>
                                 <div class="icon">
                                     <a href="https://github.com/s0if/second-project.git"> <img
-                                            src="image/github-icon.png" alt="github-icon"></a>
+                                            src="../image/github-icon.png" alt="github-icon"></a>
                                 </div>
                             </div>
                         </div>
