--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./CSS/header.css">
+    <link rel="stylesheet" href="./CSS/bodyAbout.css">
     <title>Portfolio Saif</title>
 </head>
 
@@ -15,62 +17,71 @@
 
                 <div class="logo">
                     <img src="image/me.jpg" alt="the logo in navbar">
+
                 </div>
                 <div>
                     <ul>
                         <li><a href="index.html">about</a></li>
-                        <li><a href="experience.html">experience</a></li>
-                        <li><a href="project.html">project</a></li>
-                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="HTML/experience.html">experience</a></li>
+                        <li><a href="HTML/project.html">project</a></li>
+                        <li><a href="HTML/contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-<section>
-    <div class="abut-me" >
-        <div class="contaner">
-            <h2>about me</h2>
-            <div class="body-about">
-                <div class="text-container">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor voluptas atque obcaecati
-                        debitis
-                        nobis illum veritatis voluptatum dolore vero, minus corporis autem, mollitia eos hic
-                        provident
-                        consequatur itaque aliquid. Maiores, praesentium ipsa eius dolorum, quaerat facilis
-                        explicabo
-                        exercitationem nobis cupiditate pariatur similique laboriosam, ipsam alias libero aspernatur
-                        dignissimos. Omnis, exercitationem?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor voluptas atque obcaecati
-                        debitis
-                        nobis illum veritatis voluptatum dolore vero, minus corporis autem, mollitia eos hic
-                        provident
-                        consequatur itaque aliquid. Maiores, praesentium ipsa eius dolorum, quaerat facilis
-                        explicabo
-                        exercitationem nobis cupiditate pariatur similique laboriosam, ipsam alias libero aspernatur
-                        dignissimos. Omnis, exercitationem?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor voluptas atque obcaecati
-                        debitis
-                        nobis illum veritatis voluptatum dolore vero, minus corporis autem, mollitia eos hic
-                        provident
-                        consequatur itaque aliquid. Maiores, praesentium ipsa eius dolorum, quaerat facilis
-                        explicabo
-                        exercitationem nobis cupiditate pariatur similique laboriosam, ipsam alias libero aspernatur
-                        dignissimos. Omnis, exercitationem?
-                    </p>
-                </div>
-                <div class="my-picture">
-                    <img src="image/me.jpg" alt="">
+    <section>
+        <div class="abut-me">
+            <div class="contaner">
+                <h2>about me</h2>
+                <div class="body-about">
+                    <div class="text-container">
+                        <p>
+                            <b>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor voluptas atque obcaecati
+                                debitis
+                                nobis illum veritatis voluptatum dolore vero, minus corporis autem, mollitia eos hic
+                                provident
+                                consequatur itaque aliquid. Maiores, praesentium ipsa eius dolorum, quaerat facilis
+                                explicabo
+                                exercitationem nobis cupiditate pariatur similique laboriosam, ipsam alias libero
+                                aspernatur
+                                dignissimos. Omnis, exercitationem?
+                            </b>
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor voluptas atque obcaecati
+                            debitis
+                            nobis illum veritatis voluptatum dolore vero, minus corporis autem, mollitia eos hic
+                            provident
+                            consequatur itaque aliquid. Maiores, praesentium ipsa eius dolorum, quaerat facilis
+                            explicabo
+                            exercitationem nobis cupiditate pariatur similique laboriosam, ipsam alias libero aspernatur
+                            dignissimos. Omnis, exercitationem?
+                        </p>
+                        <p>
+                            <em>
+
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor voluptas atque obcaecati
+                                debitis
+                                nobis illum veritatis voluptatum dolore vero, minus corporis autem, mollitia eos hic
+                                provident
+                                consequatur itaque aliquid. Maiores, praesentium ipsa eius dolorum, quaerat facilis
+                                explicabo
+                                exercitationem nobis cupiditate pariatur similique laboriosam, ipsam alias libero
+                                aspernatur
+                                dignissimos. Omnis, exercitationem?
+                            </em>
+                        </p>
+                    </div>
+                    <div class="my-picture">
+                        <img src="image/me.jpg" alt="this is image saifaldin">
+                        <figcaption>this is image saifaldin</figcaption>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 </body>
 
 </html>
