--- a/HTML/experience.html
+++ b/HTML/experience.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../CSS/header.css">
+    <link rel="stylesheet" href="../CSS/experience.css">
     <title>experience</title>
 </head>
 
@@ -14,14 +16,14 @@
             <div class="contaner">
 
                 <div class="logo">
-                    <img src="image/me.jpg" alt="the logo in navbar">
+                    <img src="../image/me.jpg" alt="the logo in navbar">
                 </div>
                 <div>
                     <ul>
-                        <li><a href="index.html">about</a></li>
-                        <li><a href="experience.html">experience</a></li>
-                        <li><a href="project.html">project</a></li>
-                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="../index.html">about</a></li>
+                        <li><a href="./contact.html">experience</a></li>
+                        <li><a href="./project.html">project</a></li>
+                        <li><a href="./contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
