--- a/HTML/experience.html
+++ b/HTML/experience.html
@@ -17,13 +17,15 @@
 
                 <div class="logo">
                     <img src="../image/me.jpg" alt="the logo in navbar">
+
                 </div>
-                <div>
+                <div class="list">
+                    <img src="../image/list.png" alt="list">
                     <ul>
                         <li><a href="../index.html">about</a></li>
-                        <li><a href="./contact.html">experience</a></li>
-                        <li><a href="./project.html">project</a></li>
-                        <li><a href="./contact.html">contact</a></li>
+                        <li><a href="experience.html">experience</a></li>
+                        <li><a href="project.html">project</a></li>
+                        <li><a href="contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -57,6 +59,7 @@
             </div>
         </div>
     </section>
+
 </body>
 
 </html>
