--- a/HTML/project.html
+++ b/HTML/project.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="stylesheet" href="../CSS/projects.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
     <title>Project</title>
 </head>
 
@@ -17,13 +18,15 @@
 
                 <div class="logo">
                     <img src="../image/me.jpg" alt="the logo in navbar">
+
                 </div>
-                <div>
+                <div class="list">
+                    <img src="../image/list.png" alt="list">
                     <ul>
                         <li><a href="../index.html">about</a></li>
-                        <li><a href="./contact.html">experience</a></li>
-                        <li><a href="./project.html">project</a></li>
-                        <li><a href="./contact.html">contact</a></li>
+                        <li><a href="experience.html">experience</a></li>
+                        <li><a href="project.html">project</a></li>
+                        <li><a href="contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -130,6 +133,20 @@
             </div>
         </div>
     </section>
+    <footer>
+        <h1>saifaldin komi</h1>
+        <div class="icons">
+            <a target="_blank" href="https://www.linkedin.com/in/saif-aldin-komi/">
+                <img src="../image/linkedin.png" alt="linkedin">
+            </a>
+            <a target="_blank" href="https://www.facebook.com/saifaldin.alkomi">
+                <img src="../image/facebook.png" alt="facebook">
+            </a>
+            <a target="_blank" href="https://wa.me/qr/X5J7RTHY7QFUI1">
+                <img src="../image/whatsapp.png" alt="whatsapp">
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
