--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./CSS/header.css">
     <link rel="stylesheet" href="./CSS/bodyAbout.css">
+    <link rel="stylesheet" href="./CSS/footer.css">
     <title>Portfolio Saif</title>
 </head>
 
@@ -19,7 +20,8 @@
                     <img src="image/me.jpg" alt="the logo in navbar">
 
                 </div>
-                <div>
+                <div class="list">
+                    <img src="./image/list.png" alt="list">
                     <ul>
                         <li><a href="index.html">about</a></li>
                         <li><a href="HTML/experience.html">experience</a></li>
@@ -38,8 +40,11 @@
                     <div class="text-container">
                         <p>
                             <b>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor voluptas atque obcaecati
-                                debitis
+                                <u>
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor voluptas atque
+                                    obcaecati
+                                    debitis
+                                </u>
                                 nobis illum veritatis voluptatum dolore vero, minus corporis autem, mollitia eos hic
                                 provident
                                 consequatur itaque aliquid. Maiores, praesentium ipsa eius dolorum, quaerat facilis
@@ -72,7 +77,16 @@
                                 aspernatur
                                 dignissimos. Omnis, exercitationem?
                             </em>
+
                         </p>
+                        <em>
+                            <ul>
+                                <b>
+                                    <blockquote cite="https://www.brainyquote.com/quotes/a_p_j_abdul_kalam_717796">
+                                        If you want to shine like a sun, first burn like a sun.</blockquote>
+                                </b>
+                            </ul>
+                        </em>
                     </div>
                     <div class="my-picture">
                         <img src="image/me.jpg" alt="this is image saifaldin">
@@ -82,6 +96,20 @@
             </div>
         </div>
     </section>
+    <footer>
+        <h1>saifaldin komi</h1>
+        <div class="icons">
+            <a target="_blank" href="https://www.linkedin.com/in/saif-aldin-komi/">
+                <img src="./image/linkedin.png" alt="github-icon">
+            </a>
+            <a target="_blank" href="https://www.facebook.com/saifaldin.alkomi">
+                <img src="./image/facebook.png" alt="facebook">
+            </a>
+            <a target="_blank" href="https://wa.me/qr/X5J7RTHY7QFUI1">
+                <img src="./image/whatsapp.png" alt="whatsapp">
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
