--- a/HTML/experience.html
+++ b/HTML/experience.html
@@ -18,7 +18,9 @@
 
                 </div>
                 <div class="list">
-                    <img src="../image/list.png" alt="list">
+                    <button id="list">
+                        <img src="../image/list.png" alt="list">
+                    </button>
                     <ul>
                         <li><a href="../index.html">about</a></li>
                         <li><a href="experience.html">experience</a></li>
@@ -56,8 +58,18 @@
                 </div>
             </div>
         </div>
+        <div class="dashbord hidden" id="dashbord">
+            <div class="list">
+                <ul>
+                    <li><a href="../index.html">about</a></li>
+                    <li><a href="../HTML/experience.html">experience</a></li>
+                    <li><a href="../HTML/project.html">project</a></li>
+                    <li><a href="../HTML/contact.html">contact</a></li>
+                </ul>
+            </div>
+        </div>
     </section>
-
+    <script src="../JS/scripr.js"></script>
 </body>
 
 </html>
