--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
+
     <title>Portfolio Saif</title>
 </head>
 
@@ -18,7 +19,9 @@
 
                 </div>
                 <div class="list">
-                    <img src="./image/list.png" alt="list">
+                    <button id="list">
+                        <img src="./image/list.png" alt="list">
+                    </button>
                     <ul>
                         <li><a href="index.html">about</a></li>
                         <li><a href="HTML/experience.html">experience</a></li>
@@ -92,6 +95,16 @@
                 </div>
             </div>
         </div>
+        <div class="dashbord hidden" id="dashbord">
+            <div class="list">
+                <ul>
+                    <li><a href="index.html">about</a></li>
+                    <li><a href="HTML/experience.html">experience</a></li>
+                    <li><a href="HTML/project.html">project</a></li>
+                    <li><a href="HTML/contact.html">contact</a></li>
+                </ul>
+            </div>
+        </div>
     </section>
     <footer>
         <h1>saifaldin komi</h1>
@@ -107,6 +120,7 @@
             </a>
         </div>
     </footer>
+    <script src="./JS/scripr.js"></script>
 </body>
 
 </html>
