--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -18,8 +18,10 @@
 
                 </div>
                 <div class="list">
-                    <img src="../image/list.png" alt="list" >
-                    <ul >
+                    <button id="list">
+                        <img src="../image/list.png" alt="list">
+                    </button>
+                    <ul>
                         <li><a href="../index.html">about</a></li>
                         <li><a href="experience.html">experience</a></li>
                         <li><a href="project.html">project</a></li>
@@ -42,6 +44,16 @@
                 </div>
             </div>
         </div>
+        <div class="dashbord hidden" id="dashbord">
+            <div class="list">
+                <ul>
+                    <li><a href="../index.html">about</a></li>
+                    <li><a href="../HTML/experience.html">experience</a></li>
+                    <li><a href="../HTML/project.html">project</a></li>
+                    <li><a href="../HTML/contact.html">contact</a></li>
+                </ul>
+            </div>
+        </div>
     </section>
     <footer>
         <h1>saifaldin komi</h1>
@@ -57,6 +69,7 @@
             </a>
         </div>
     </footer>
+    <script src="../JS/scripr.js"></script>
 </body>
 
 </html>
