--- a/HTML/project.html
+++ b/HTML/project.html
@@ -18,7 +18,10 @@
 
                 </div>
                 <div class="list">
-                    <img src="../image/list.png" alt="list">
+                    <button id="list">
+                        <img src="../image/list.png" alt="list">
+                    </button>
+
                     <ul>
                         <li><a href="../index.html">about</a></li>
                         <li><a href="experience.html">experience</a></li>
@@ -130,6 +133,16 @@
             </div>
         </div>
     </section>
+    <div class="dashbord hidden" id="dashbord">
+        <div class="list">
+            <ul>
+                <li><a href="../index.html">about</a></li>
+                <li><a href="../HTML/experience.html">experience</a></li>
+                <li><a href="../HTML/project.html">project</a></li>
+                <li><a href="../HTML/contact.html">contact</a></li>
+            </ul>
+        </div>
+    </div>
     <footer>
         <h1>saifaldin komi</h1>
         <div class="icons">
@@ -144,6 +157,7 @@
             </a>
         </div>
     </footer>
+    <script src="../JS/scripr.js"></script>
 </body>
 
 </html>
